// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTAcard links renders mainnet link when chain is not supported 1`] = `
<DocumentFragment>
  <section
    class="CTACards__CTASection-sc-1lbpl6-0 cIXeJs"
  >
    <a
      class="components__StyledLink-sc-88web0-5 kYFdcM CTACards__CTA1-sc-1lbpl6-1 eofYCX"
      href="https://help.uniswap.org/en/articles/5391541-providing-liquidity-on-uniswap-v3"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="Column__AutoColumn-sc-1r2yyln-2 CTACards__ResponsiveColumn-sc-1lbpl6-4 fYeWeg gjzWtJ"
      >
        <div
          class="theme__TextWrapper-sc-5lu8um-0 etkwRL CTACards__HeaderText-sc-1lbpl6-3 kWiYgr css-kh5b9v"
        >
          Learn about providing liquidity ↗
        </div>
        <div
          class="theme__TextWrapper-sc-5lu8um-0 etkwRL css-1frkxb8"
          style="align-items: center; display: flex;"
        >
          Check out our v3 LP walkthrough and migration guides.
        </div>
      </div>
    </a>
    <a
      class="components__StyledLink-sc-88web0-5 kYFdcM CTACards__CTA2-sc-1lbpl6-2 fbVxQY"
      href="https://info.uniswap.org/#/pools"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="Column__AutoColumn-sc-1r2yyln-2 CTACards__ResponsiveColumn-sc-1lbpl6-4 fYeWeg gjzWtJ"
      >
        <div
          class="theme__TextWrapper-sc-5lu8um-0 etkwRL CTACards__HeaderText-sc-1lbpl6-3 kWiYgr css-kh5b9v"
          style="align-self: flex-start;"
        >
          Top pools ↗
        </div>
        <div
          class="theme__TextWrapper-sc-5lu8um-0 etkwRL css-1frkxb8"
          style="align-self: flex-start;"
        >
          Explore Uniswap Analytics.
        </div>
      </div>
    </a>
  </section>
</DocumentFragment>
`;

exports[`CTAcard links renders specific link when chain is supported 1`] = `
<DocumentFragment>
  <section
    class="CTACards__CTASection-sc-1lbpl6-0 cIXeJs"
  >
    <a
      class="components__StyledLink-sc-88web0-5 kYFdcM CTACards__CTA1-sc-1lbpl6-1 eofYCX"
      href="https://help.uniswap.org/en/articles/5391541-providing-liquidity-on-uniswap-v3"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="Column__AutoColumn-sc-1r2yyln-2 CTACards__ResponsiveColumn-sc-1lbpl6-4 fYeWeg gjzWtJ"
      >
        <div
          class="theme__TextWrapper-sc-5lu8um-0 etkwRL CTACards__HeaderText-sc-1lbpl6-3 kWiYgr css-kh5b9v"
        >
          Learn about providing liquidity ↗
        </div>
        <div
          class="theme__TextWrapper-sc-5lu8um-0 etkwRL css-1frkxb8"
          style="align-items: center; display: flex;"
        >
          Check out our v3 LP walkthrough and migration guides.
        </div>
      </div>
    </a>
    <a
      class="components__StyledLink-sc-88web0-5 kYFdcM CTACards__CTA2-sc-1lbpl6-2 fbVxQY"
      href="https://info.uniswap.org/#/optimism/pools"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="Column__AutoColumn-sc-1r2yyln-2 CTACards__ResponsiveColumn-sc-1lbpl6-4 fYeWeg gjzWtJ"
      >
        <div
          class="theme__TextWrapper-sc-5lu8um-0 etkwRL CTACards__HeaderText-sc-1lbpl6-3 kWiYgr css-kh5b9v"
          style="align-self: flex-start;"
        >
          Top pools ↗
        </div>
        <div
          class="theme__TextWrapper-sc-5lu8um-0 etkwRL css-1frkxb8"
          style="align-self: flex-start;"
        >
          Explore Uniswap Analytics.
        </div>
      </div>
    </a>
  </section>
</DocumentFragment>
`;
